Agrega efectos visuales del ultimo egercicio y mejora de inputs, tamaño de imagenes.

--- a/Views/register.html
+++ b/Views/register.html
@@ -96,21 +96,26 @@ integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWu
 </body>
 <footer>
     <section class="pie">
-        <i class="fas fa-credit-card"></i>
-        <h3 id="pie">Pagá con tarjeta o en efectivo</h3>
-        <p id="pie">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-
-        <i class="fas fa-gift"></i>
-        <h3 id="pie">Envío gratis desde $ 2.500</h3>
-        <p id="pie">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-
-        <i class="fas fa-user-shield"></i>
-        <h3 id="pie">Seguridad, de principio a fin</h3>
-        <p id="pie">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-
-        <h3 id="pie">Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        <article class="texto-pie1">
+            <i class="fas fa-credit-card"></i>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article class="texto-pie1">
+            <i class="fas fa-gift"></i>
+            <h3>Envío gratis desde $ 2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </article>
+        <article class="texto-pie1">
+            <i class="fas fa-user-shield"></i>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </article>
+        <article class="texto-pie2">
+            <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        </article>  
     </section>
 </html>
