--- a/Views/home.html
+++ b/Views/home.html
@@ -54,92 +54,92 @@ integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWu
         <section class="vista-productos">
             <h3 class="ultima-visita">Basado en tu última visita.</h3>
             <div class="producto">
-                <img src="/static/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-cafetera-moulinex.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>    
                    <div class="precios-producto">
                         <p id="precio">$6.770</p>
                         <p id="descuento">$40% OFF</p>
                     </div> 
-                    <p id="descripcion">Cafetera Moulinex</p>
+                    <p class="descripcion">Cafetera Moulinex</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-macbook-pro-2019.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-macbook-pro-2019.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$230.000</p>
                         <p id="descuento">20% OFF</p>
                     </div>
-                    <p id="descripcion">Macbook Pro 2019</p>
+                    <p class="descripcion">Macbook Pro 2019</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-samsung-galaxy-s10.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-samsung-galaxy-s10.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$70.500</p>
                         <p id="descuento">10% OFF</p>
                     </div>
-                    <p id="descripcion">Samsun Galaxy S10</p>
+                    <p class="descripcion">Samsun Galaxy S10</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-tv-samsung-smart.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-tv-samsung-smart.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$23.200</p>
                         <p id="descuento">5% OFF</p>
                     </div>
-                    <p id="descripcion">Samsung Smart TV 43"</p>
+                    <p class="descripcion">Samsung Smart TV 43"</p>
                 </div>
             </div>
             <h3 class="ofertas">Sección de Ofertas</h3>
             <div class="producto">
-                <img src="/static/images/img-cafetera-moulinex.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-cafetera-moulinex.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$6.770</p>
                         <p id="descuento">40% OFF</p>
                     </div>
-                    <p id="descripcion">Cafetera Moulinex</p>
+                    <p class="descripcion">Cafetera Moulinex</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-macbook-pro-2019.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-macbook-pro-2019.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$230.000</p>
                         <p id="descuento">20% OFF</p>
                     </div>
-                    <p id="descripcion">Macbook Pro 2019</p>
+                    <p class="descripcion">Macbook Pro 2019</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-samsung-galaxy-s10.jpg" alt="cafetera" width="200px">
+                <img src="/static/images/img-samsung-galaxy-s10.jpg" alt="cafetera">
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$70.500</p>
                         <p id="descuento">10% OFF</p>
                     </div>
-                    <p id="descripcion">Samsun Galaxy S10</p>
+                    <p class="descripcion">Samsun Galaxy S10</p>
                 </div>
             </div>
             <div class="producto">
-                <img src="/static/images/img-tv-samsung-smart.jpg" alt="cafetera" width="200px">                
+                <img src="/static/images/img-tv-samsung-smart.jpg" alt="cafetera">                
                 <div class="desc-producto">
                     <p><i class="fas fa-truck"></i></p>
                     <div class="precios-producto">
                         <p id="precio">$23.200</p>
                         <p id="descuento">5% OFF</p>
                     </div>
-                    <p id="descripcion">Samsung Smart TV 43"</p>
+                    <p class="descripcion">Samsung Smart TV 43"</p>
                 </div>
             </div>
         </section>
@@ -147,21 +147,26 @@ integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWu
 </body>
 <footer>
     <section class="pie">
-        <i class="fas fa-credit-card"></i>
-        <h3 id="pie">Pagá con tarjeta o en efectivo</h3>
-        <p id="pie">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-
-        <i class="fas fa-gift"></i>
-        <h3 id="pie">Envío gratis desde $ 2.500</h3>
-        <p id="pie">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-
-        <i class="fas fa-user-shield"></i>
-        <h3 id="pie">Seguridad, de principio a fin</h3>
-        <p id="pie">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-
-        <h3 id="pie">Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        <article class="texto-pie1">
+            <i class="fas fa-credit-card"></i>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article class="texto-pie1">
+            <i class="fas fa-gift"></i>
+            <h3>Envío gratis desde $ 2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </article>
+        <article class="texto-pie1">
+            <i class="fas fa-user-shield"></i>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </article>
+        <article class="texto-pie2">
+            <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        </article>  
     </section>
 </html>
