--- a/Public/Css/style.css
+++ b/Public/Css/style.css
@@ -198,7 +198,7 @@ footer i{
     border-radius: 5px;
     margin-bottom: 40px;
     margin-top: 10px;
-    font-size: .6rem;
+    font-size: 0.7rem;
 }
 .button-login{
     width:60px;
@@ -313,7 +313,7 @@ form h4{
         display:flex;
     }
     .navbar a{
-        font-size: .4rem;
+        font-size: 0.4rem;
     }
     .producto{
         width: 40vw;
@@ -353,7 +353,7 @@ form h4{
     }
 
     .navbar a{
-        font-size: .8rem;
+        font-size: .9rem;
     }
     .campo-input{
         width: 25vw;
