--- a/Views/login.html
+++ b/Views/login.html
@@ -51,7 +51,7 @@ integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWu
             <form action="/" method="#">
                 <label for="usuario" class="label">Nombre de usuario</label>
                     <p><input class="campo-input" type="text" name="name" placeholder="Ingrese su usuario" required minlength=2></p>
-                <label for="usuario" class="label">Conraseña</label>
+                <label for="usuario" class="label">Contraseña</label>
                     <p><input class="campo-input" type="password" name="password" placeholder="Ingrese su contraseña" required minlength=6></p>
             <div class="botonera">
                 <button class="button-login" type="submit">Enviar</button>
